UF-7012: Switched CitizenMapping to Citizen and upgraded CaseData